[package]
name = "notrs"
version = "0.1.1"
edition = "2021"
description = "A dead-simple dbus notification server written in rust and using hyprctl notify to actual send notifications"
license  = "GPL-3.0-only"
authors = ["Vaelio <archelio@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
